@@ -60,8 +60,6 @@ under the License.
   </scm>
 
   <issueManagement>
-    <!-- <system>jira</system>
-      <url>https://issues.apache.org/jira/browse/DATASKETCHES</url> -->
     <system>GitHub</system>
     <url>https://github.com/apache/${project.artifactId}/issues</url>
   </issueManagement>
@@ -82,11 +80,10 @@ under the License.
 
     <!-- System-wide properties -->
     <maven.version>3.6.3</maven.version>
-    <java.version>21</java.version>
-    <enable.preview>--enable-preview</enable.preview>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
-    <argLine>-Xmx4g -Duser.language=en -Duser.country=US -Dfile.encoding=UTF-8 ${enable.preview}</argLine>
+    <java.version>25</java.version>
+    <jvm-arguments></jvm-arguments>
+    <maven.compiler.release>${java.version}</maven.compiler.release>
+    <argLine>-Xmx4g -Duser.language=en -Duser.country=US -Dfile.encoding=UTF-8 ${jvm-arguments}</argLine>
     <charset.encoding>UTF-8</charset.encoding>
     <project.build.sourceEncoding>${charset.encoding}</project.build.sourceEncoding>
     <project.build.resourceEncoding>${charset.encoding}</project.build.resourceEncoding>
@@ -95,17 +92,16 @@ under the License.
 
     <!--  org.apache.maven plugins -->
     <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
-    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+    <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
     <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
-    <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
+    <maven-enforcer-plugin.version>3.6.2</maven-enforcer-plugin.version>
     <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
-    <maven-install-plugin.version>3.1.2</maven-install-plugin.version>
     <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
     <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
     <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
-    <maven-remote-resources-plugin.version>3.2.0</maven-remote-resources-plugin.version>
     <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
-    <maven-surefire-failsafe-plugins.version>3.5.2</maven-surefire-failsafe-plugins.version> <!-- for surefire, failsafe and surefire-report -->
+    <!-- for surefire, failsafe and surefire-report: -->
+    <maven-surefire-failsafe-plugins.version>3.5.2</maven-surefire-failsafe-plugins.version>
     <maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
     <!-- com.github plugins -->
     <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
@@ -115,12 +111,11 @@ under the License.
     <coveralls-repo-token></coveralls-repo-token>
     <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
     <!-- org.jacoco.maven plugins -->
-    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
+    <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
     <!-- org.mojohaus plugins -->
     <versions-maven-plugin.version>2.18.0</versions-maven-plugin.version>
     <!-- other -->
     <lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
-    <zero-allocation-hashing.version>0.16</zero-allocation-hashing.version>
   </properties>
 
   <dependencies>
@@ -129,14 +124,6 @@ under the License.
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>${testng.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <!-- Used for xxHash testing -->
-      <groupId>net.openhft</groupId>
-      <artifactId>zero-allocation-hashing</artifactId>
-      <version>${zero-allocation-hashing.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -155,8 +142,9 @@ under the License.
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven-compiler-plugin.version}</version>
           <configuration>
+            <fork>true</fork>
             <compilerArgs>
-              <arg>${enable.preview}</arg>
+              <arg>${jvm-arguments}</arg>
             </compilerArgs>
           </configuration>
         </plugin>
@@ -181,9 +169,14 @@ under the License.
               </goals>
               <configuration>
                 <rules>
-                  <requireJavaVersion>
-                    <version>${java.version},</version>
-                  </requireJavaVersion>
+                  <!-- The normal Java enforcer rule out of the box is toolchain unaware 
+                  and is really only usefull for checking what java version is available 
+                  via the users shell environment. It does not check that the java compiler 
+                  version is sane or matches the java command version. 
+                  In the context of toolchains this rule is useless. 
+                  See: https://github.com/paulmoloney/maven-enforcer-toolchain-rules
+                  <requireJavaVersion> ... </requireJavaVersion>
+                  -->
                   <requireMavenVersion>
                     <version>[${maven.version},4.0.0)</version>
                   </requireMavenVersion>
@@ -228,10 +221,12 @@ under the License.
           <version>${maven-javadoc-plugin.version}</version>
           <configuration>
             <excludePackageNames>org.apache.datasketches.memory/internal</excludePackageNames>
+            <docfilessubdirs>true</docfilessubdirs>
             <show>public</show>
-            <additionalOptions>
-              <additionalOption>${enable.preview}</additionalOption>
-            </additionalOptions>
+            <doclint>all,-missing</doclint>
+            <additionalJOptions>
+              <additionalJOption>${jvm-arguments}</additionalJOption>
+            </additionalJOptions>
           </configuration>
           <executions>
             <execution>
@@ -276,10 +271,13 @@ under the License.
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-failsafe-plugins.version}</version>
           <configuration>
-            <argLine>${enable.preview}</argLine>
+            <argLine>${jvm-arguments}</argLine>
+            <jdkToolchain>
+              <version>${java.version}</version>
+            </jdkToolchain>
             <trimStackTrace>false</trimStackTrace>
             <useManifestOnlyJar>false</useManifestOnlyJar>
-            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+            <redirectTestOutputToFile>false</redirectTestOutputToFile>
             <reportsDirectory>${project.build.directory}/test-output/${maven.build.timestamp}</reportsDirectory>
           </configuration>
         </plugin>
@@ -329,6 +327,7 @@ under the License.
               <exclude>**/git.properties</exclude>
               <exclude>LICENSE</exclude>
               <exclude>NOTICE</exclude>
+              <exclude>**/*.code-workspace</exclude>
             </excludes>
           </configuration>
         </plugin>
@@ -379,6 +378,14 @@ under the License.
       </plugins>
     </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
